--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <meta name="description" content="Portfolio of Vidhyanshu Kumar - First Year Student at Manipal University Jaipur | Developer | Problem Solver">
     <meta name="theme-color" content="#1a2332">
-    <title>Vidhyanshu Kumar - Portfolio</title>
+    <title>Vidhyanshu Kumar Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -50,10 +50,10 @@
                     <a href="https://github.com/viidhyanshu" target="_blank" class="social-icon" title="GitHub">
                         <i class="fab fa-github"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/vidhyanshu-kumar" target="_blank" class="social-icon" title="LinkedIn">
+                    <a href="https://www.linkedin.com/in/viidhyanshu" target="_blank" class="social-icon" title="LinkedIn">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="https://leetcode.com/viidhyanshu" target="_blank" class="social-icon" title="LeetCode">
+                    <a href="https://leetcode.com/viidhyashu" target="_blank" class="social-icon" title="LeetCode">
                         <i class="fas fa-code"></i>
                     </a>
                     <a href="mailto:viidhyasnhu@gmail.com" class="social-icon" title="Email">
@@ -185,13 +185,13 @@
                         <i class="fab fa-github"></i>
                         <span>GitHub: viidhyanshu</span>
                     </a>
-                    <a href="https://leetcode.com/viidhyanshu" target="_blank" class="link-card">
+                    <a href="https://leetcode.com/viidhyashu" target="_blank" class="link-card">
                         <i class="fas fa-code"></i>
                         <span>LeetCode: viidhyanshu</span>
                     </a>
                     <a href="https://www.linkedin.com/in/viidhyanshu/" target="_blank" class="link-card">
                         <i class="fab fa-linkedin"></i>
-                        <span>LinkedIn: vidhyanshu kumar</span>
+                        <span>LinkedIn: Vidhyanshu Kumar</span>
                     </a>
                     <a href="mailto:viidhyasnhu@gmail.com" class="link-card">
                         <i class="fas fa-envelope"></i>
@@ -341,12 +341,12 @@
                         <h3>GitHub</h3>
                         <p>viidhyanshu</p>
                     </a>
-                    <a href="https://www.linkedin.com/in/vidhyanshu-kumar" target="_blank" class="contact-card">
+                    <a href="https://www.linkedin.com/in/viidhyanshu" target="_blank" class="contact-card">
                         <i class="fab fa-linkedin"></i>
                         <h3>LinkedIn</h3>
-                        <p>vidhyanshu kumar</p>
+                        <p>Vidhyanshu Kumar</p>
                     </a>
-                    <a href="https://leetcode.com/viidhyanshu" target="_blank" class="contact-card">
+                    <a href="https://leetcode.com/viidhyashu" target="_blank" class="contact-card">
                         <i class="fas fa-code"></i>
                         <h3>LeetCode</h3>
                         <p>viidhyanshu</p>
@@ -359,7 +359,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Vidhyanshu Kumar. All rights reserved.</p>
+            <p>&copy; 2025 Vidhyanshu Kumar. All rights reserved.</p>
             <p>Manipal University Jaipur</p>
         </div>
     </footer>
