--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <meta name="description" content="Portfolio of Vidhyanshu Kumar - First Year Student at Manipal University Jaipur | Developer | Problem Solver">
     <meta name="theme-color" content="#1a2332">
-    <title>Vidhyanshu Kumar Portfolio</title>
+    <title>Vidhyanshu Kumar</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="logo">
                 <div class="logo-icon">
-                    <i class="fas fa-mountain"></i>
+                   <i class="fa-brands fa-studiovinari"></i>
                 </div>
                 <div class="logo-text">
                     <span class="logo-main">VIDHYANSHU</span>
@@ -242,10 +242,10 @@
 
                 <div class="project-card">
                     <div class="project-icon">
-                        <i class="fas fa-code-branch"></i>
+                        <i class="fa-solid fa-mug-hot"></i>
                     </div>
-                    <h3 class="project-title">FuzzySpoon</h3>
-                    <p class="project-description">A development project showcasing various programming concepts and implementations.</p>
+                    <h3 class="project-title">The Coffee Shop</h3>
+                    <p class="project-description">A cozy café-inspired website focused on clean design, warmth, and smooth user experience.</p>
                     <a href="https://github.com/Viidhyanshu/FuzzySpoon.git" target="_blank" class="project-link">
                         <i class="fab fa-github"></i> View on GitHub
                     </a>
@@ -253,11 +253,11 @@
 
                 <div class="project-card">
                     <div class="project-icon">
-                        <i class="fas fa-seedling"></i>
+                        <i class="fas fa-car"></i>
                     </div>
-                    <h3 class="project-title">Larkspur</h3>
-                    <p class="project-description">A creative project demonstrating modern web development practices and design principles.</p>
-                    <a href="https://github.com/Viidhyanshu/Larkspur.git" target="_blank" class="project-link">
+                    <h3 class="project-title">F1 Telemetry Analytics Dashboard</h3>
+                    <p class="project-description">F1 telemetry dashboard transforming raw race data into interactive and intuitive insights.</p>
+                    <a href="https://github.com/Viidhyanshu/F1-Telemetry-Analytics-Dashboard.git" target="_blank" class="project-link">
                         <i class="fab fa-github"></i> View on GitHub
                     </a>
                 </div>
